metadata/force-app/main/default/objects/Webinar__c/fields/archivestart__c.field-meta.xml
<CustomField>
    <fullName>archivestart__c</fullName>
    <description>This is the time when the lobby “opens” for the archived event – when users are able to launch the event console. e.g., Thu, 30 Apr 2009 12:19 PDT</description>
    <label>archivestart</label>
    <type>DateTime</type>
</CustomField>