metadata/force-app/main/default/objects/Webinar__c/fields/attendedarchivecount__c.field-meta.xml
<CustomField>
    <fullName>attendedarchivecount__c</fullName>
    <description>The number of users who attended the archive portion of the event. A cumulative number.</description>
    <label>attendedarchivecount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>