metadata/force-app/main/default/objects/Webinar__c/fields/attendedcount__c.field-meta.xml
<CustomField>
    <fullName>attendedcount__c</fullName>
    <description>The number of attendees for the event. A cumulative number.</description>
    <label>attendedcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>