metadata/force-app/main/default/objects/Webinar__c/fields/attendedlivecount__c.field-meta.xml
<CustomField>
    <fullName>attendedlivecount__c</fullName>
    <description>The number of users who attended the live portion of the event. A cumulative number.</description>
    <label>attendedlivecount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>