metadata/force-app/main/default/objects/Webinar__c/fields/audienceurl__c.field-meta.xml
<CustomField>
    <fullName>audienceurl__c</fullName>
    <description>URL to register and access the webinar</description>
    <label>audienceurl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>