metadata/force-app/main/default/objects/Webinar__c/fields/campaigncode__c.field-meta.xml
<CustomField>
    <fullName>campaigncode__c</fullName>
    <description>Field to capture external campaign code or any other value</description>
    <label>campaigncode</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>