metadata/force-app/main/default/objects/Webinar__c/fields/eventtag2__c.field-meta.xml
<CustomField>
    <fullName>eventtag2__c</fullName>
    <description>Text used to tag event for sorting or tracking</description>
    <label>eventtag2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>