metadata/force-app/main/default/objects/Webinar__c/fields/eventtime__c.field-meta.xml
<CustomField>
    <fullName>eventtime__c</fullName>
    <description>This is the published date/time of the event.  e.g., Thu, 30 Apr 2009 12:19 PDT</description>
    <label>eventtime</label>
    <type>DateTime</type>
</CustomField>