metadata/force-app/main/default/objects/Webinar__c/fields/liveend__c.field-meta.xml
<CustomField>
    <fullName>liveend__c</fullName>
    <description>This is the time when the lobby closes for the live events – when users are no longer able to launch the event console. This date is normally set to two hours after the livestart, and reset to the time when the presenter ends the event (by clicking the “End Live” button in Presentation Manager). e.g., Thu, 30 Apr 2009 12:19 PDT</description>
    <label>liveend</label>
    <type>DateTime</type>
</CustomField>