metadata/force-app/main/default/objects/Webinar__c/fields/livestart__c.field-meta.xml
<CustomField>
    <fullName>livestart__c</fullName>
    <description>This is the time when the lobby “opens” for the live event – when users are able to launch the event console. Typically, this is configured 15 minutes in advance of the published event time. e.g., Thu, 30 Apr 2009 12:19 PDT</description>
    <label>livestart</label>
    <type>DateTime</type>
</CustomField>