metadata/force-app/main/default/objects/Webinar__c/fields/noshowcount__c.field-meta.xml
<CustomField>
    <fullName>noshowcount__c</fullName>
    <description>The number of people who registered but did not attend. A cumulative number.</description>
    <label>noshowcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>