metadata/force-app/main/default/objects/Webinar__c/fields/registrantcount__c.field-meta.xml
<CustomField>
    <fullName>registrantcount__c</fullName>
    <description>The number of registrants for this event. A cumulative number.</description>
    <label>registrantcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>