metadata/force-app/main/default/objects/Webinar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>eventid__c</columns>
    <columns>NAME</columns>
    <columns>registrantcount__c</columns>
    <columns>attendedcount__c</columns>
    <columns>attendedarchivecount__c</columns>
    <columns>eventtime__c</columns>
    <columns>eventtag1__c</columns>
    <columns>eventtag2__c</columns>
    <columns>eventtag3__c</columns>
    <columns>eventtag4__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>